[gd_scene load_steps=6 format=3 uid="uid://xhrbej3ty1jw"]

[ext_resource type="Script" uid="uid://umclb4yi6073" path="res://hud.gd" id="1_37p78"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37p78"]
bg_color = Color(0.12724835, 0.217816, 0.20891428, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_64ctp"]
bg_color = Color(0.1254902, 0.21960784, 0.20784314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8sq4i"]
bg_color = Color(0.1254902, 0.21960784, 0.20784314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_640wx"]
bg_color = Color(0.1254902, 0.21960784, 0.20784314, 1)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_37p78")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 512.0
offset_bottom = 256.0
color = Color(0.072842635, 0.072842635, 0.072842635, 1)

[node name="ScoreLeft" type="Label" parent="."]
layout_mode = 0
offset_top = 16.0
offset_right = 32.0
offset_bottom = 39.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Hint" type="Label" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 128.0
offset_right = 376.0
offset_bottom = 232.0
text = "Controls:
- Left Player: W, S (up, down)
- Right Player: O, L (up, down)"

[node name="ScoreRight" type="Label" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 16.0
offset_right = 512.0
offset_bottom = 39.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button1Player" type="Button" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 64.0
offset_right = 176.0
offset_bottom = 95.0
theme_override_styles/normal = SubResource("StyleBoxFlat_37p78")
text = "1P"

[node name="Button2Players" type="Button" parent="."]
layout_mode = 0
offset_left = 232.0
offset_top = 64.0
offset_right = 280.0
offset_bottom = 95.0
theme_override_styles/normal = SubResource("StyleBoxFlat_64ctp")
text = "2P"

[node name="ButtonAuto" type="Button" parent="."]
layout_mode = 0
offset_left = 336.0
offset_top = 64.0
offset_right = 384.0
offset_bottom = 95.0
theme_override_styles/normal = SubResource("StyleBoxFlat_8sq4i")
text = "Auto"

[node name="WinnerMessage" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "wins!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonPlayAgain" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -96.0
offset_right = 64.0
offset_bottom = -65.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_640wx")
text = "Play again?"

[connection signal="pressed" from="Button1Player" to="." method="_on_button_1_player_pressed"]
[connection signal="pressed" from="Button2Players" to="." method="_on_button_2_players_pressed"]
[connection signal="pressed" from="ButtonAuto" to="." method="_on_button_auto_pressed"]
[connection signal="pressed" from="ButtonPlayAgain" to="." method="_on_button_play_again_pressed"]
